--- a/catalog.html
+++ b/catalog.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <!-- header-->
+    <!-- Header-->
     <header class="page-header">
       <div class="page-container header-container">
         <!-- Logo-->
         <a class="logo" href="index.html">
           <img class="logo" src="images/index/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
         </a>
-        <!-- Поиск-->
+        <!-- Search-->
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <label class="visually-hidden" for="search-field">
             Поиск.
@@ -23,7 +23,6 @@
             Найти
           </button>
         </form>
-        <!-- навигаци по сайту верхняя-->
         <ul class="personal-list">
             <li class="personal-item personal-login">
               <a class="personal-link login-link" href="#">Коля Петухов</a>
@@ -80,7 +79,7 @@
               </div>
             </li>
         </ul>
-        <!-- Основная навигация с выпадающим подменю-->
+        <!-- Navigation with submenu -->
         <nav class="navigation">
           <ul class="navigation-menu">
             <li class="navigation-menu-item has-submenu">
@@ -126,15 +125,14 @@
         </nav>
       </div>
     </header>
-    <!-- Основное содержимое-->
+    <!-- Main -->
     <main class="main-inner main-container">
       <header class="inner-header">
         <div class="page-container">
           <h1 class="inner-header-title title">
             Моноподы для селфи
           </h1>
-
-            <!-- Хлебные крошки-->
+          <!-- Breadcrumbs -->
           <ol class="breadcrumbs">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
@@ -154,13 +152,13 @@
           </ol>
         </div>
       </header>
-      <!-- Фильтр-->
+      <!-- Filter-->
       <section class="catalog-products">
         <div class="page-container catalog-products-container">
           <h2 class="visually-hidden">
             Список товаров с фильтрами.
           </h2>
-          <form class="filter-catalog" action="https://echo.htmlacademy.ru/"      method="get">
+          <form class="filter-catalog" action="https://echo.htmlacademy.ru/" method="get">
             <h3 class="filter-title">
               фильтр:
             </h3>
@@ -246,7 +244,6 @@
                 </li>
               </ul>
             </fieldset>
-
             <fieldset class="filter-catalog-group">
               <legend class="legend-name bluetooth-title">
                 Bluetooth
@@ -276,7 +273,7 @@
               Показать
             </button>
           </form>
-          <!-- Сортировка-->
+          <!-- Sorting-->
           <div class="catalog-right-column">
             <div class="sorting-container">
               <h3 class="sorting-title">
@@ -293,7 +290,6 @@
                   Дорогие
                 </option>
               </select>
-
               <ul class="sorting-list">
                 <li class="sorting-item">
                   <a class="sorting-link sort-down">
@@ -307,8 +303,7 @@
                 </li>
               </ul>
             </div>
-
-            <!-- Список товаров-->
+            <!-- Catalog-main-->
             <div class="catalog-container">
               <h2 class="visually-hidden">
                 Список товаров.
@@ -358,8 +353,7 @@
               <a class="download-button" href="#">
                 Загрузить ещё
               </a>
-
-              <!-- ПАГИНАЦИЯ-->
+              <!-- Pagination-->
               <ol class="catalog-pagination">
                 <li class="catalog-pagination-item">
                   <a class="catalog-pagination-link catalog-pagination-name pagination-prev pagination-disabled">
@@ -402,14 +396,13 @@
         </div>
       </section>
     </main>
-    <!-- Подвал-->
+    <!-- Footer-->
     <footer class="page-footer">
       <div class="page-container footer-container">
         <div class="footer-logo-wrapper">
           <a class="logo" href="index.html">
             <img class="logo-footer" src="images/index/logo-footer.svg" width="145" height="36" alt="Логотип сайта Девайс.">
           </a>
-
             <address class="footer-contacts-address">
               <p class="footer-contacts-address-text">
                 Санкт-Петербург, набережная реки Карповки, 5, литера П.
