--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <!-- header-->
+    <!-- Header-->
     <header class="page-header">
       <div class="page-container header-container">
         <!-- Logo-->
         <a class="logo" href="index.html" aria-current="page">
           <img class="logo" src="images/index/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
         </a>
-        <!-- Поиск-->
+        <!-- Search-->
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <label class="visually-hidden" for="search-field">
             Поиск.
@@ -23,7 +23,6 @@
             Найти
           </button>
         </form>
-        <!-- навигация по сайту верхняя-->
         <ul class="personal-list">
           <li class="personal-item personal-login">
             <a class="personal-link login-link" href="#">Войти</a>
@@ -79,7 +78,7 @@
             </div>
           </li>
         </ul>
-        <!-- Основная навигация с выпадающим подменю-->
+        <!-- Navigation with submenu -->
         <nav class="navigation">
           <ul class="navigation-menu">
             <li class="navigation-menu-item has-submenu">
@@ -125,19 +124,17 @@
         </nav>
       </div>
     </header>
-    <!-- Основное содержимое-->
+    <!-- Main -->
     <main class="main-index main-container">
-
       <h1 class="visually-hidden">
         Интернет-магазин гаджетов «Девайс».
       </h1>
-      <!-- Слайдер-->
+      <!-- Slider-->
       <section class="slider">
         <div class="page-container slider-container">
           <h2 class="visually-hidden">
             Популярные товары.
           </h2>
-
           <ol class="slider-list">
             <li class="slider-item slider-item-active">
               <div class="slider-image-wrapper">
@@ -267,7 +264,7 @@
                     </p>
                   </li>
                   <li class="slider-info-item">
-                    <p class="slider-info-value">
+                    <p class="slider-info-value">Pagination
                       Карбон
                     </p>
                     <p class="slider-info-property">
@@ -278,7 +275,7 @@
               </div>
             </li>
           </ol>
-          <!-- Пагинация-->
+          <!-- -->
           <ol class="slider-pagination">
             <li>
               <button class="slider-pagination-button slider-pagination-button-active" type="button">
@@ -298,7 +295,7 @@
           </ol>
         </div>
       </section>
-      <!-- Основной каталог-->
+      <!-- Catalog-->
       <section class="catalog-main">
         <div class="page-container">
           <h2 class="visually-hidden">
@@ -338,13 +335,12 @@
           </ul>
         </div>
       </section>
-      <!-- Услуги-->
+      <!-- Services-->
       <section class="services">
         <div class="page-container services-container">
           <h2 class="visually-hidden">
             Сервисы.
           </h2>
-
           <ol class="services-list">
             <li class="services-item services-active">
               <button class="services-button services-button-active button" type="button">Доставка</button>
@@ -356,7 +352,6 @@
               <button class="services-button button" type="button">Кредит</button>
             </li>
           </ol>
-
           <ol class="services-description">
             <li class="services-description-item services-delivery services-description-active">
               <h3 class="services-title title">
@@ -385,8 +380,7 @@
           </ol>
         </div>
       </section>
-
-      <!-- Доставка под заказ-->
+      <!-- Delivery -->
       <section class="delivery">
         <div class="page-container">
           <h2 class="visually-hidden">
@@ -397,8 +391,7 @@
           </button>
         </div>
       </section>
-
-      <!-- О нас-->
+      <!-- Information -->
       <section class="information">
         <div class="page-container information-container">
           <h2 class="visually-hidden">
@@ -414,7 +407,6 @@
             <p class="about-text">
               Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
             </p>
-
             <ul class="about-list">
               <li class="about-item">
                 <a class="about-link" href="#">
@@ -432,13 +424,11 @@
                 </a>
               </li>
             </ul>
-
             <a class="about-detail button" href="#">
               Подробнее о нас
             </a>
-
           </article>
-          <!-- Контакты-->
+          <!-- Contacts-->
           <article class="contacts">
             <h3 class="contacts-title title">
               Контакты
@@ -472,8 +462,7 @@
           </article>
         </div>
       </section>
-
-      <!-- Рассылка-->
+      <!-- Subscribe-->
       <section class="subscribe">
         <div class="page-container subscribe-container">
           <h2 class="subscribe-title title">
@@ -497,15 +486,13 @@
         </div>
       </section>
     </main>
-
-    <!-- Подвал-->
+    <!-- Footer-->
     <footer class="page-footer">
       <div class="page-container footer-container">
         <div class="footer-logo-wrapper">
           <a class="logo" href="index.html">
             <img class="logo-footer" src="images/index/logo-footer.svg" width="145" height="36" alt="Логотип сайта Девайс.">
           </a>
-
             <address class="footer-contacts-address">
               <p class="footer-contacts-address-text">
                 Санкт-Петербург, набережная реки Карповки, 5, литера П.
