--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     </p>
                   </li>
                   <li class="slider-info-item">
-                    <p class="slider-info-value">Pagination
+                    <p class="slider-info-value">
                       Карбон
                     </p>
                     <p class="slider-info-property">
@@ -309,7 +309,7 @@
             </li>
             <li class="catalog-main-item">
               <a class="catalog-main-link catalog-monopod" href="#">
-                Моноподы для селфи
+                Моноподы<br> для селфи
               </a>
             </li>
             <li class="catalog-main-item">
@@ -358,7 +358,7 @@
                 Доставка
               </h3>
               <p class="services-text">
-                Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+                Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь<br> мы неплохо заработаем, поднимая его на ваш этаж.
               </p>
             </li>
             <li class="services-description-item services-garanty">
@@ -402,7 +402,7 @@
               О нас
             </h3>
             <p class="about-text">
-              Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+              Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.
             </p>
             <p class="about-text">
               Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
@@ -434,7 +434,7 @@
               Контакты
             </h3>
             <p class="contacts-text">
-              Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.
+              Вы можете забрать товар сами, заехав в наш офис.<br> Заодно сможете проверить работоспособность покупки.
             </p>
               <h4 class="contacts-subtitle">
                 Интернет-магазин «Девайс»
@@ -469,7 +469,7 @@
             Подпишитесь на рассылку
           </h2>
           <p class="subscribe-text">
-            Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.
+            Еженедельный дайджест с обзорами новинок,<br> длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.
           </p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru"  method="post">
             <label class="visually-hidden" for="subscribe-email">
