--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Header-->
     <header class="page-header">
-      <div class="page-container header-container">
+      <div class="page-container header-container header-container-inner">
         <!-- Logo-->
         <a class="logo" href="index.html">
           <img class="logo" src="images/index/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
@@ -128,7 +128,7 @@
     <!-- Main -->
     <main class="main-inner main-container">
       <header class="inner-header">
-        <div class="page-container">
+        <div class="page-container inner-header-container">
           <h1 class="inner-header-title title">
             Моноподы для селфи
           </h1>
@@ -313,7 +313,7 @@
                   <a class="product-link" href="#">
                     <img class="product-image" src="images/catalog/product-1.png" width="360" height="380" alt="Любительская селфи-палка.">
                     <div class="product-text-wrapper">
-                      <p class="product-text">Любительская селфи-палка</p>
+                      <p class="product-text">Любительская<br> селфи-палка</p>
                       <p class="product-price">500 ₽</p>
                     </div>
                   </a>
@@ -333,7 +333,7 @@
                   <a class="product-link" href="#">
                     <img class="product-image" src="images/catalog/product-3.png" width="360" height="380" alt="Непотопляемая селфи-палка.">
                     <div class="product-text-wrapper">
-                      <p class="product-text">Непотопляемая селфи-палка</p>
+                      <p class="product-text">Непотопляемая<br> селфи-палка</p>
                       <p class="product-price">2 500 ₽</p>
                     </div>
                   </a>
@@ -343,8 +343,8 @@
                   <a class="product-link" href="#">
                     <img class="product-image" src="images/catalog/product-4.png" width="360" height="380" alt="Селфи-палка «Следуй за мной».">
                     <div class="product-text-wrapper">
-                      <p class="product-text">Селфи-палка «Следуй за мной»</p>
-                      <p class="product-price">500 ₽</p>
+                      <p class="product-text">Селфи-палка «Следуй<br> за мной»</p>
+                      <p class="product-price">1 500 ₽</p>
                     </div>
                   </a>
                   <a class="product-about-info">Подробнее</a>
