Всплывающее субменю на грид

--- a/catalog.html
+++ b/catalog.html
@@ -90,24 +90,24 @@
                 </span>
               </button>
               <ul class="submenu">
-                <li class="submenu-item">
+                <li class="submenu-item submenu-virtual">
                   <a class="submenu-link" href="#">
                     Виртуальная реальность
                   </a>
                 </li>
-                <li class="submenu-item">
-                  <a class="submenu-link" href="#">Моноподы для cелфи</a>
+                <li class="submenu-item submenu-monopod">
+                  <a class="submenu-link" href="catalog.html">Моноподы для cелфи</a>
                 </li>
-                <li class="submenu-item">
+                <li class="submenu-item submenu-camera">
                   <a class="submenu-link" href="#">Экшн-камеры</a>
                 </li>
-                <li class="submenu-item">
+                <li class="submenu-item submenu-fitness">
                   <a class="submenu-link" href="#">Фитнес-браслеты</a>
                 </li>
-                <li class="submenu-item">
+                <li class="submenu-item submenu-smart-watch">
                   <a class="submenu-link" href="#">Умные часы</a>
                 </li>
-                <li class="submenu-item">
+                <li class="submenu-item submenu-quadcopter">
                   <a class="submenu-link" href="#">Квадрокоптеры</a>
                 </li>
               </ul>
