--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/index/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -90,24 +92,24 @@
                 </span>
               </button>
               <ul class="submenu">
-                <li class="submenu-item submenu-virtual">
+                <li class="submenu-item">
                   <a class="submenu-link" href="#">
                     Виртуальная реальность
                   </a>
                 </li>
-                <li class="submenu-item submenu-monopod">
+                <li class="submenu-item">
                   <a class="submenu-link" href="catalog.html">Моноподы для cелфи</a>
                 </li>
-                <li class="submenu-item submenu-camera">
+                <li class="submenu-item">
                   <a class="submenu-link" href="#">Экшн-камеры</a>
                 </li>
-                <li class="submenu-item submenu-fitness">
+                <li class="submenu-item">
                   <a class="submenu-link" href="#">Фитнес-браслеты</a>
                 </li>
-                <li class="submenu-item submenu-smart-watch">
+                <li class="submenu-item">
                   <a class="submenu-link" href="#">Умные часы</a>
                 </li>
-                <li class="submenu-item submenu-quadcopter">
+                <li class="submenu-item">
                   <a class="submenu-link" href="#">Квадрокоптеры</a>
                 </li>
               </ul>
@@ -316,8 +318,8 @@
                       <p class="product-text">Любительская<br> селфи-палка</p>
                       <p class="product-price">500 ₽</p>
                     </div>
+                    <span class="product-about-info">Подробнее</span>
                   </a>
-                  <a class="product-about-info">Подробнее</a>
                 </li>
                 <li class="product-card has-new">
                   <a class="product-link" href="#">
@@ -326,8 +328,8 @@
                       <p class="product-text">Профессиональная селфи-палка</p>
                       <p class="product-price">1 500 ₽</p>
                      </div>
+                     <span class="product-about-info">Подробнее</span>
                   </a>
-                  <a class="product-about-info">Подробнее</a>
                 </li>
                 <li class="product-card">
                   <a class="product-link" href="#">
@@ -336,8 +338,8 @@
                       <p class="product-text">Непотопляемая<br> селфи-палка</p>
                       <p class="product-price">2 500 ₽</p>
                     </div>
+                    <span class="product-about-info">Подробнее</span>
                   </a>
-                  <a class="product-about-info">Подробнее</a>
                 </li>
                 <li class="product-card">
                   <a class="product-link" href="#">
@@ -346,8 +348,8 @@
                       <p class="product-text">Селфи-палка «Следуй<br> за мной»</p>
                       <p class="product-price">1 500 ₽</p>
                     </div>
+                    <span class="product-about-info">Подробнее</span>
                   </a>
-                  <a class="product-about-info">Подробнее</a>
                 </li>
               </ul>
               <a class="download-button" href="#">
