--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
               </span>
               Корзина
             </a>
-             <!-- Popover -->
-             <div class="popover popover-cart">
+            <!-- Popover -->
+            <div class="popover popover-cart">
               <div class="popover-content">
                 <h2 class="visually-hidden">Корзина</h2>
                 <ul class="cart-items-list list-reset">
                   <li class="cart-item">
                     <a class="cart-link" href="#">
                       <img class="cart-image" src="images/catalog/basket-amateur.jpg"
-                        alt="Любительская селфи-палка." width="39" height="43">
+                      alt="Любительская селфи-палка." width="39" height="43">
                       <h3 class="cart-name">Любительская селфи-палка</h3>
                     </a>
                     <button class="cart-button">
@@ -477,7 +477,7 @@
             <label class="visually-hidden" for="subscribe-email">
               Ваш email.
             </label>
-            <input class="subscribe-input" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail">
+            <input class="subscribe-input" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail" required>
             <button class="subscribe-button" type="submit">
               Подписаться
             </button>
@@ -575,7 +575,7 @@
             <label class="modal-label" for="name">
               Ваше имя:
             </label>
-            <input class="modal-input modal-input-name" type="text" id="name" name="name" placeholder="Введите имя">
+            <input class="modal-input modal-input-name" type="text" id="name" name="name" placeholder="Введите имя" required>
             <span class="modal-help">Добавьте имя</span>
           </fieldset>
           <fieldset class="modal-group">
