Исправление для автоматической проверки

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               </div>
             </li>
           </ol>
-          <!-- -->
+          <!-- Slider-pagination -->
           <ol class="slider-pagination">
             <li>
               <button class="slider-pagination-button slider-pagination-button-active" type="button">
@@ -607,7 +607,7 @@
               <button class="quantity-button min-button">
                 <span class="visually-hidden">Уменьшить.</span>
               </button>
-              <input class="modal-input quantity-input" type="text" id="quantity" name="quantity" min="0"
+              <input class="modal-input quantity-input" type="text" id="quantity" name="quantity" min="1"
                 value="1">
               <button class="quantity-button max-button">
                 <span class="visually-hidden">Увеличить.</span>
